	CMakeLists.txt: get rid of dummy cpu_caps.c

	* src/arch/i386/x86_floatmul.h, src/arch/i386/x86_floatmul_sse2.c,
	src/arch/i386/x86_floatmul_mmx.c: added

	* src/arch/portable/floatmul.c, src/arch/i386/x86_floatmul.c
	src/al_main.h, src/alc/alc_context.c, src/al_cpu_caps.h,
	src/Makefile.am, configure.ac, CMakeLists.txt: use specialized floatmul
	functions for clean SIMD seperation

2006-10-26  Prakash Punnoor <prakash@punnoor.de>

	* src/arch/i386/x86_64_linux_cpu_caps_detect_prk.yasm: typo

	* /admin/CMakeModules/FindConfigHelper.cmake: renamed to
	ConfigHelper.cmake

	* CMakeLists.txt: Don't use FIND_PACKAGE for ConfigHelper

2006-09-01  Prakash Punnoor <prakash@punnoor.de>

	* src/al_filter.c: prevent extra memory reallocation, as sizes
	are in bytes, not samples (bug spotted by Ivan Dubrov)

2006-08-29  Prakash Punnoor <prakash@punnoor.de>

	* Makefile.am: renamed FindCompilerMMXFlag.cmake to
	FindCompilerSIMDFlags.cmake

2006-08-27  Prakash Punnoor <prakash@punnoor.de>

	* src/arch/i386/x86_floatmul.c: don't use SIMD routines for few
	samples (bug spotted by Ivan Dubrov)

2006-08-21  Sven Panne  <sven.panne@aedion.de>

	* src/alc/alc_context.c: Avoid access to undefined memory.

	* src/alc/alc_device.c, src/alc/alc_device.h, src/alc/alc_context.c,
	src/backends/alc_backend.h: Setting the current context to NULL has
	nothing to with pausing the context (the pause/resume backend function
	are still there for now, they should probably be used from
	alcSuspendContext/alcProcessContext). Moved mixer initialization to
	_alInit. ALCCONTEXTP_TO_ALUINT returns an ALuint, not an int.

	* src/alc/alc_device.c, src/alc/alc_context.c: _alInit is now called
	when the first device is created, not the first context, same for
	_alExit and the destruction of the last device. This should cut down
	useless (de-)initializations and is a bit more logical.

	* src/al_mixer.c, src/al_main.c: Added debug output.
